@@ -3,6 +3,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
  - Arguments given to the qc script are passed through to the relevant
    qc check object.
  - QC script does not try to infer the location of input files.
+ - QC script accepts the rpt_list argument.
 
 release 62.1
  - Bug fix in build action for cgi files.
